samples/_failures_safe/1761474155_4705fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_449d5937.c: In function ‘main’:
./samples/SAFE/__tmp_449d5937.c:169:5: error: expected declaration or statement at end of input
  169 |     char input[1024];
      |     ^~~~
